# 0ai

./: .gitignore  Cargo.toml  README.md
doc/: cli-prompt.md
src/: app.rs  main.rs
src/a2a/: discovery.rs  server.rs
src/db/: mod.rs
src/llm/: anthropic.rs  claude_code.rs  mod.rs  ollama.rs  openai_compat.rs
src/mcp/: mod.rs
src/ui/: commands.rs  mod.rs
